--- a/ci_files/bitbucket-pipelines.yml
+++ b/ci_files/bitbucket-pipelines.yml
@@ -58,16 +58,16 @@ pipelines:
 
           - echo 'verify_accessibility' &&
             pip install -r qa/accessibility/requirements.txt &&
-            BASE_URL="http://$BITBUCKET_BRANCH.$BITBUCKET_PROJECT.elasticbeanstalk.com" LIGHTHOUSE_IMAGE="http://127.0.0.1:8085" python qa/accessibility/page_runner.py &&
-            BASE_URL="http://$BITBUCKET_BRANCH.$BITBUCKET_PROJECT.elasticbeanstalk.com" FILE_NAME="index" behave qa/accessibility/features
+            HOST_URL="http://$BITBUCKET_BRANCH.$BITBUCKET_PROJECT.elasticbeanstalk.com" LIGHTHOUSE_IMAGE="http://127.0.0.1:8085" python qa/accessibility/page_runner.py &&
+            HOST_URL="http://$BITBUCKET_BRANCH.$BITBUCKET_PROJECT.elasticbeanstalk.com" FILE_NAME="index" behave qa/accessibility/features
 
           - echo 'verify_analytics' &&
             pip install -r qa/analytics/requirements.txt &&
-            BASE_URL="http://$BITBUCKET_BRANCH.$BITBUCKET_PROJECT.elasticbeanstalk.com" SELENIUM="http://127.0.0.1:4444/wd/hub" DRIVER=get_remote_ga_chrome behave qa/analytics/features
+            HOST_URL="http://$BITBUCKET_BRANCH.$BITBUCKET_PROJECT.elasticbeanstalk.com" SELENIUM="http://127.0.0.1:4444/wd/hub" DRIVER=get_remote_ga_chrome behave qa/analytics/features
 
           - echo 'verify_functionality' &&
             pip install -r qa/functional/requirements.txt &&
-            BASE_URL="http://$BITBUCKET_BRANCH.$BITBUCKET_PROJECT.elasticbeanstalk.com" SELENIUM="http://127.0.0.1:4444/wd/hub" DRIVER="headless_chrome" behave qa/functional/features
+            HOST_URL="http://$BITBUCKET_BRANCH.$BITBUCKET_PROJECT.elasticbeanstalk.com" SELENIUM="http://127.0.0.1:4444/wd/hub" DRIVER="headless_chrome" behave qa/functional/features
 
           - echo 'verify_performance' &&
             pip install -r qa/performance/requirements.txt &&
@@ -75,12 +75,12 @@ pipelines:
 
           - echo 'verify_security' &&
             pip install -r qa/security/requirements.txt &&
-            BASE_URL="http://$BITBUCKET_BRANCH.$BITBUCKET_PROJECT.elasticbeanstalk.com" ZAP_ADDRESS="http://127.0.0.1:8080" ZAP_API_KEY=0123456789 python qa/security/zap_scanner.py &&
-            BASE_URL="http://$BITBUCKET_BRANCH.$BITBUCKET_PROJECT.elasticbeanstalk.com" SELENIUM="http://127.0.0.1:4444/wd/hub" DRIVER=headless_chrome behave qa/security/features
+            HOST_URL="http://$BITBUCKET_BRANCH.$BITBUCKET_PROJECT.elasticbeanstalk.com" ZAP_ADDRESS="http://127.0.0.1:8080" ZAP_API_KEY=0123456789 python qa/security/zap_scanner.py &&
+            HOST_URL="http://$BITBUCKET_BRANCH.$BITBUCKET_PROJECT.elasticbeanstalk.com" SELENIUM="http://127.0.0.1:4444/wd/hub" DRIVER=headless_chrome behave qa/security/features
 
           - echo 'verify_visual' &&
             pip install -r qa/visual/requirements.txt &&
-            BASE_URL="http://$BITBUCKET_BRANCH.$BITBUCKET_PROJECT.elasticbeanstalk.com" SELENIUM="http://127.0.0.1:4444/wd/hub" API_KEY=$EYES_API_KEY DRIVER="headless_chrome" behave qa/visual/features
+            HOST_URL="http://$BITBUCKET_BRANCH.$BITBUCKET_PROJECT.elasticbeanstalk.com" SELENIUM="http://127.0.0.1:4444/wd/hub" API_KEY=$EYES_API_KEY DRIVER="headless_chrome" behave qa/visual/features
 
 definitions:
   services:
