Updates to example file and install.sh

--- a/secrets/example.env.example
+++ b/secrets/example.env.example
@@ -29,6 +29,11 @@ RECOVERY_CITY=''
 RECOVERY_PHONE=''
 
 # For use with Allure Report Hub
-ALLURE_REPORT_HUB_URL=''
-ALLURE_PROJECT_NAME=''
-ALLURE_HUB_CLIENT_ID=''
+export ALLURE_REPORT_HUB_URL='https://example-allure-hub.com'
+export ALLURE_PROJECT_NAME='example-project-name'
+export ALLURE_HUB_CLIENT_ID='the-client-id-of-allure-hub.apps.googleusercontent.com'
+export TEST_RUNNER='Local'
+export ENVIRONMENT_NAME='Testing'
+
+export ZAP_ADDRESS='http://localhost:8080'
+export ZAP_API_KEY='0123456789'
