update dependencies. Locust changes to accomadate/

--- a/security/requirements.txt
+++ b/security/requirements.txt
@@ -1,6 +1,6 @@
-behave==1.2.6
+git+https://github.com/behave/behave#1.2.7.dev1
 selenium==3.14.1
 python-owasp-zap-v2.4==0.0.12
 python-dotenv==0.9.1
-requests==2.20.1
+requests==2.22.0
 bandit==1.5.1
