--- a/analytics/requirements.txt
+++ b/analytics/requirements.txt
@@ -1,4 +1,4 @@
-behave==1.2.6
+git+https://github.com/behave/behave#1.2.7.dev1
 selenium==3.14.1
 python-dotenv==0.9.1
-requests==2.20.1
+requests==2.22.0
